--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,8 +1,7 @@
-RewriteEngine On
-
-# Si el archivo o directorio físico existe, lo sirve normalmente
-RewriteCond %{REQUEST_FILENAME} !-f
-RewriteCond %{REQUEST_FILENAME} !-d
-
-# Si no existe, redirige todo a index.php
-RewriteRule ^ index.php [QSA,L]
+<IfModule mod_rewrite.c>
+    RewriteEngine On
+    RewriteBase /
+    RewriteCond %{REQUEST_FILENAME} !-f
+    RewriteCond %{REQUEST_FILENAME} !-d
+    RewriteRule ^ index.php [QSA,L]
+</IfModule>
